# pareto-router

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
bench_gen/: generate_routing_dataset.py
examples/: plot_frontier.py  quickstart.py
pareto_router/: __init__.py  benchmark.py  cli.py  data.py  features.py  metrics.py  model.py  predictor.py  router.py
tests/: test_metrics.py  test_model_and_benchmark.py  test_predictor.py  test_router.py
